--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^16.0.3",
     "@sentry/nextjs": "^10.26.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
+    "cross-env": "^10.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-swagger-doc": "^0.4.1",
